tests/errors/prelude-option-planned.ari
fn main() -> i64 {
  let value: Option[i64] = 0;
  return value;
}
